# Sentinel

./: .editorconfig  .gitignore  README.md  deploy.sh  simulate-app.py
backend/: Cargo.toml  Dockerfile
backend/.cargo/: .global-cache
backend/.cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: bcrypt-0.15.1.crate  redis-0.24.0.crate
backend/db/: schema.sql
backend/src/: auth.rs  aws.rs  main.rs  secrets.rs
frontend/: .env.production  components.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: config.ts  main.tsx  styles.css
frontend/src/components/: WorldMap.tsx  WorldMapImage.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  chart.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/ui/: App.tsx  Dashboard.tsx  Insights.tsx  Layout.tsx  RichDashboard.tsx
frontend/src/ui/pages/: Assistant.tsx  Login.tsx  MetricsExplorer.tsx  Overview.tsx  Signup.tsx  Tracing.tsx
ops/: docker-compose.yml  seed.sql
ops/pg/init/: 001-extensions.sql  010-schema.sql
