[package]
name = "stateful-dashboard-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1", features = ["http1", "server"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql"] }
redis = { version = "0.24", features = ["tokio-comp"] }
jsonwebtoken = "9"
bcrypt = "0.15"
chrono = "0.4"
md5 = "0.7"
reqwest = { version = "0.11", features = ["json"] }

# AWS SDKs for CloudWatch / Logs / X-Ray pull
aws-config = "1"
aws-sdk-cloudwatch = "1"


